- Spamcontrol plugin : you can define the minimum group required to use the !spamins command. Also you can now define an alias for the spamins command.

[TODO]

- Many minor bugfixes and improvements to B3 core and native plugins

Upgrading note:

* Now B3 ensures group levels do exists when used in plugin config files. The plugin_admin.xml config files was using bad group level prior to B3 1.8.3. Make sure to correct them by comparing your own plugin_admin.xml with the new one.
* SpamControl plugin : The config file plugin_spamcontrol.xml has a new section regarding the !spamins command. Make sure to update your config file.

1.8.1 -> 1.8.2
----
A list of changed files is available after release here:
github.com/BigBrotherBot/big-brother-bot/compare/v1.8.1...v1.8.2
----
- BF3: added Close Quarter DLC maps specifics
- BF3: implementation of update R24
- Many bugfixes, core improvements and scaling enhancements (larger eventqueue)

1.8.0 -> 1.8.1
----
A list of changed files is available after release here:
github.com/BigBrotherBot/big-brother-bot/compare/v1.8.0...v1.8.1
----
Game updates
- Now supports BF3 server release R20 (supports private messaging and bigscreen text)
Improvements
- ctime plugin is now a subplugin of XLRstats (disable your seperate ctime plugin!)
- xlrstats .sql code now part of the b3.sql distribtution and updates
  (no more need to install/update the tables seperately)
- status plugin can store data in a database and/or status.xml file

1.7.1 -> 1.8.0
----
A list of changed files is available after release here:
github.com/BigBrotherBot/big-brother-bot/compare/v1.7.1...v1.8.0
----
New games :
- Red Orchestra 2
- BattleField 3
Improvements :
- Urban Terror : improved team handling
- CoD7: better suicide handling
- TK-plugin adapted to BF3
- Better error handlng, improved error messages and python version checking
- Multiple core enhancements


1.6.1 -> 1.7.1
----
(version 1.7.0 was only available for a few hours, thus can be ignored.